--- a/UpaProject/Views/Journals/Operativs/WindowNewOpTurn.xaml
+++ b/UpaProject/Views/Journals/Operativs/WindowNewOpTurn.xaml
@@ -10,27 +10,21 @@
         <StackPanel Orientation="Vertical"
                     HorizontalAlignment="Center"
                     VerticalAlignment="Center">
-            <StackPanel Orientation="Horizontal">
+            <StackPanel Orientation="Horizontal"
+                        Margin="5">
                 <TextBlock  VerticalAlignment="Center" 
                             Margin="10,0" 
                             Style="{StaticResource Txt}"
                             Width="200"
                             Text="Дежурный инженер КИП:"/>
                 <ComboBox x:Name="CmbDutyEngKIP" 
-                          Style="{StaticResource CmbJournal}"/>
+                          SelectedValuePath="IDPerson"
+                          DisplayMemberPath="Name"
+                          Style="{StaticResource Cmb}"/>
             </StackPanel>
-            <StackPanel Orientation="Horizontal">
-                <TextBlock  VerticalAlignment="Center"
-                            Style="{StaticResource Txt}"
-                            Margin="10,0"
-                            Width="200"
-                            Text="Дежурный инженер АСУ:"/>
-                <ComboBox x:Name="CmbDutyEngASU" 
-                          Style="{StaticResource CmbJournal}"/>
-            </StackPanel>
-
             <StackPanel DockPanel.Dock="Top"
-                        Orientation="Horizontal">
+                        Orientation="Horizontal"
+                        Margin="5">
                 <TextBlock VerticalAlignment="Center"
                             Style="{StaticResource Txt}"
                            Margin="10,0" 
@@ -65,51 +59,51 @@
                              VerticalAlignment="Center" 
                              GroupName="GroupTurn" />
             </StackPanel>
-            <StackPanel Orientation="Horizontal">
+            <StackPanel Orientation="Horizontal"
+                        Margin="5">
                 <TextBlock  VerticalAlignment="Center"
                             Style="{StaticResource Txt}"
                             Margin="10,0" 
                             Width="200"
                             Text="Дежурный слесарь:"/>
                 <ComboBox x:Name="CmbDutyRep1" 
-                          Style="{StaticResource CmbJournal}"/>
+                          SelectedValuePath="IDPerson"
+                          DisplayMemberPath="Name"
+                          Style="{StaticResource Cmb}"/>
                 <!--Скрытие "Лишних" полей и запоминалка введенных
                 данных в крайний раз(по дневной и ночной смене)-->
             </StackPanel>
             <StackPanel Orientation="Horizontal"
-                        Name="StckDutyRep2">
+                        Name="StckDutyRep2"
+                        Margin="5">
                 <TextBlock  VerticalAlignment="Center" 
                             Style="{StaticResource Txt}"
                             Margin="10,0" 
                             Width="200"
                             Text="Дежурный слесарь:"/>
                 <ComboBox x:Name="CmbDutyRep2"
-                          Style="{StaticResource CmbJournal}"/>
+                          SelectedValuePath="IDPerson"
+                          DisplayMemberPath="Name"
+                          Style="{StaticResource Cmb}"/>
             </StackPanel>
             <StackPanel Orientation="Horizontal"
-                        Name="StckDutyRep3">
+                        Name="StckDutyRep3"
+                        Margin="5">
                 <TextBlock  VerticalAlignment="Center"                              
                             Margin="10,0"
                             Width="200"
                             Style="{StaticResource Txt}"
                             Text="Дежурный слесарь:"/>
                 <ComboBox x:Name="CmbDutyRep3" 
-                          Style="{StaticResource CmbJournal}"/>
+                          SelectedValuePath="IDPerson"
+                          DisplayMemberPath="Name"
+                          Style="{StaticResource Cmb}"/>
             </StackPanel>
-            <StackPanel Orientation="Horizontal" 
-                        Height="48"
-                        Margin="5"
-                        HorizontalAlignment="Center">
-                <Button x:Name="BtnAddNewEmployee"
-                        
-                        Content="Добавить нового сотрудника"
-                        Style="{StaticResource ButtonFrame}"
-                        Click="BtnAddNewEmployee_Click"/>
-                <Button x:Name="BtnAddNewTurn"
+            <Button x:Name="BtnAddNewTurn"
                         Content="Новая смена"
                         Click="BtnAddNewTurn_Click"
-                        Style="{StaticResource ButtonFrame}"/>
-            </StackPanel>
+                        Style="{StaticResource BtnFrame}"
+                    Height="35"/>
         </StackPanel>
     </Grid>
 </Window>
